# hls-lpdaac-reconciliation

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cdk.json  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/actions/deploy/: action.yml
.github/actions/install/: action.yml
.github/workflows/: deploy.yml  inventory.yml  main.yml
cdk/: __init__.py  app.py  app_it.py  stack.py  stack_it.py
src/hls_lpdaac_reconciliation/generate_report/: __init__.py  index.py
src/hls_lpdaac_reconciliation/request/: index.py
src/hls_lpdaac_reconciliation/response/: __init__.py  index.py
tests/fixtures/: HLS_reconcile_2024239_2.0.json  message-discrepancies-historical.txt  message-discrepancies.txt
tests/integration/: conftest.py  test_generate_report.py  test_lambda.py  test_request.py  test_response.py
tests/unit/: conftest.py  test_generate_report.txt  test_request.py  test_response.py  test_response.txt  test_stack.py
tests/unit/cassettes/: test_lpdaac_forward_handler.yaml  test_lpdaac_historical_handler.yaml
