[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[project]
name = "hls-lpdaac-reconciliation"
version = "0.1.0"
description = "HLS LPDAAC Reconciliation"
readme = "README.md"
authors = [{ name = "Development Seed" }]
requires-python = ">=3.12,<3.13"
dependencies = ["aws-cdk-lib>=2.202.0", "constructs>=10.4.2"]

[dependency-groups]
dev = [
    "aws-lambda-typing>=2.20.0",
    "boto3>=1.38.41",
    "boto3-stubs[athena,glue,iam,lambda,s3,sns,sqs]>=1.38.41",
    "botocore-stubs>=1.38.30",
    "moto[s3,sns,sqs]>=5.1.6",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-vcr>=1.0.2",
    "ruff>=0.12.0",
    "vcrpy>=7.0.0",
]

[tool.mypy]
files = ["cdk", "src"]
mypy_path = ["cdk", "src"]
explicit_package_bases = true
strict = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "-vv",
    "--doctest-modules",
    "--doctest-report=ndiff",
    "--tb=short",
]
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE", "NUMBER"]
testpaths = ["tests/unit"]
filterwarnings =  [
    # See https://docs.python.org/3/library/warnings.html#the-warnings-filter
    # action:[message regex]:[category]:[module]:[lineno]
    'ignore:datetime.datetime.utcnow\(\) is deprecated:DeprecationWarning:botocore.*'
]
